# PixelDINO

./: .gitignore  README.md  augmentations_test.py  build_data.py  download_timeseries.py  evaluate.py  inference.py  pyproject.toml  sample_config.yml  train.py  train_adversarial.py  train_bayes.py  train_dino.py  train_semi.py  train_unsupervised.py  train_vanilla_dino.py  ts_inference.py
configs/: adversarial.yml  baseline.yml  dino+all.yml  dino.yml  dino_1e-4.yml  dino_cosine_ema.yml  dino_w01_t01.yml  dino_w03_t01.yml  dino_w03_t05.yml  dino_with_ema.yml  fixmatchseg.yml  fixmatchseg1.yml  mt_no_aug.yml  multitemporal.yml  no_augment.yml  semi.yml  semi_b16_mt.yml  semi_b16_mt2.yml  unet16+all.yml  unet16+aug+all.yml  unet16+aug+semi.yml  unet16+aug+semi3.yml  unet16+aug.yml  unet16+dino.yml  unet16+dino05.yml  unet16.yml  unet32+dino.yml  unsupervised.yml  unsupervised_koleo.yml  unsupervised_koleo_sk.yml  unsupervised_sk.yml  vanilla_dino.yml
configs/_old/: dino_32u.yml  dino_64u.yml  dino_blunt_lr.yml  dino_cosine_ema.yml  dino_full.yml  dino_teacher.yml  semi_b16.yml  unet16+aug+mt.yml  unet16+aug+semi+mt2.yml  unet16+aug+semi10.yml
lib/: __init__.py  config_mod.py  data_loading.py  diffusion.py  lion.py  logging.py  losses.py  metrics.py  utils.py
lib/data/: sentinel2.py
lib/models/: __init__.py  calfin_style_deeplabv3p.py  deeplabv3p.py  discriminator.py  unet.py
lib/models/backbones/: __init__.py  nnutils.py  resnet.py  resnet_ln.py  xception.py
